fix gap in copyright of footer

--- a/src/footer/footer.scss
+++ b/src/footer/footer.scss
@@ -47,8 +47,8 @@
       display: flex;
       align-items: center;
 
-      i {
-        font-size: 26px;
+      img {
+        margin-right: 6px;
       }
     }
 
